--- a/translations/messages.en.xlf
+++ b/translations/messages.en.xlf
@@ -1,15 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<xliff xmlns="urn:oasis:names:tc:xliff:document:2.0" version="2.0" srcLang="ru" trgLang="en">
+<xliff xmlns="urn:oasis:names:tc:xliff:document:2.0" version="2.0" srcLang="en" trgLang="en">
   <file id="messages.en">
-    <unit id="sMIMdUS" name="user_signup.heading">
-      <notes>
-        <note category="file-source" priority="1">online-store\templates\main\security\registration.html.twig:12</note>
-      </notes>
-      <segment>
-        <source>user_signup.heading</source>
-        <target>Registration Form</target>
-      </segment>
-    </unit>
     <unit id="94mmMje" name="label.enter_email">
       <segment>
         <source>label.enter_email</source>
